// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product GuardianWeeklyDomestic correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          Your first issue of Guardian Weekly will be published on 01-01-25
        </span>
      </p>
      <p>
        Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product GuardianWeeklyRestOfWorld correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          Your first issue of Guardian Weekly will be published on 01-01-25
        </span>
      </p>
      <p>
        Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product HomeDelivery correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          You will receive your newspaper from 01-01-25
        </span>
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product NationalDelivery correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          You will receive your newspaper from 01-01-25
        </span>
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product SubscriptionCard correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          You will receive your newspaper from 01-01-25
        </span>
      </p>
      <p
        class="css-16xuyv1-SubscriptionStartItems"
      >
        You will receive your Subscription Card in your subscriber pack in the post, along with your home delivery letter.
      </p>
      <p>
        Visit your chosen participating newsagent to pick up your newspaper using your Subscription Card, or arrange a home delivery using your delivery letter.
      </p>
    </div>
  </span>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product TierThree correctly 1`] = `
<div>
  <span
    class="css-ikw7yp-SubscriptionStartItems"
  >
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          Your first issue of Guardian Weekly will be published on 01-01-25
        </span>
      </p>
      <p>
        Please allow one to seven days after the publication date for your copy to be delivered to your door, depending on postal services.
      </p>
    </div>
    <div>
      <p>
        <span
          class="css-1ekf6lc-SubscriptionStartItems"
        >
          Your digital benefits start today.
        </span>
      </p>
      <p>
        Please ensure you are signed in on all your devices to enjoy all your benefits, including unlimited app access and uninterrupted ad-free reading.
      </p>
    </div>
  </span>
</div>
`;
